<resources>
    <string name="app_name">AntidoppingApp</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="salud_hombre_texto1">Dolor de cabeza</string>
    <string name="salud_hombre_texto2">Cáncer de mama</string>
    <string name="salud_hombre_texto3">Hipogonadismo</string>
    <string name="salud_hombre_texto4">Impotencia</string>
    <string name="salud_hombre_texto5">Atrofia de testículos</string>
    <string name="salud_hombre_texto6">Reduce el número de espermatozoides</string>

    <string name="salud_mujer_texto1">Aumenta el vello facial y corporal</string>
    <string name="salud_mujer_texto2">Engrosamiento de la voz</string>
    <string name="salud_mujer_texto3">Reduce el contorno del pecho</string>
    <string name="salud_mujer_texto4">Problemas menstruales</string>
    <string name="salud_mujer_texto5">Hipertrofia del clítoris</string>

    <string name="salud_ambos_texto1">Accidentes cerebro-vasculares y coágulos de sangre</string>
    <string name="salud_ambos_texto2">Acné severo en cara y espalda</string>
    <string name="salud_ambos_texto3">Presión arterial alta y enfermedades del corazón</string>
    <string name="salud_ambos_texto4">Calvicie</string>
    <string name="salud_ambos_texto5">Problemas de crecimiento</string>
    <string name="salud_ambos_texto6">Problemas sicológicos: furia, agresión, manías y delirios</string>
    <string name="salud_ambos_texto7">Náuseas y problemas intestinales</string>
    <string name="salud_ambos_texto8">Muerte súbita</string>
    <string name="salud_ambos_texto9">Daño hepático, tumores y quistes</string>
    <string name="salud_ambos_texto10">Problemas urinarios</string>
    <string name="salud_ambos_texto11">Incrementa el riesgo de lesiones en tendones y dolor articular</string>


    <string name="vida_deportiva_texto1">No podrás competir durante el tiempo que dure tu sanción. Hay castigos que llegan a los cuatro años de inhabilitación.</string>
    <string name="vida_deportiva_texto2">Perderás todo apoyo económico y deberás afrontar individualmente tu defensa ante las instancias correspondientes.</string>
    <string name="vida_deportiva_texto3">Perderás los récords, medallas y premios que hayas conseguido beneficiándote del uso de una sustancia prohibida. </string>
    <string name="vida_deportiva_texto4">Deberás mantenerte alejado de los lugares de entrenamiento afiliados a tu federación. Eso quiere decir que ni siquiera podrás desempeñarte como entrenador de otras categorías.</string>
    <string name="vida_deportiva_texto5">Si decides seguir entrenando, deberás hacerlo por tu cuenta y no sin utilizar las instalaciones de tu federación.</string>
    <string name="title_activity_referencia_maps">Map</string>
    <string name="texto_lista_prohibida">La Lista Prohibida es un documento internacional preparado por la
        Agencia Mundial Antidopaje en el que se identifican las sustancias y métodos prohibidos en el deporte.
        Hay sustancias prohibidas en competencia y otras que están prohibidas fuera de competencia.</string>
    <string name="texto_video">Si aún no pasas un control antidopaje, este video te ilustrará los pasos
        que deberás seguir y te instruirá en tus deberes y derechos al momento de ser seleccionado.( https://goo.gl/DMLXNW )
    </string>
    <string name="texto_sancionado">Serás responsable de un dopaje si incurres en una de las siguientes faltas:</string>
    <string name="texto_sancionado_1">1. Presencia de una sustancia prohibida en tu muestra de orina y/o sangre.</string>
    <string name="texto_sancionado_2">2. Negativa a realizar un control luego de haber sido notificado.</string>
    <string name="texto_sancionado_3">3. Alteración del proceso de control al dopaje.</string>
    <string name="texto_sancionado_4">4. Posesión de una sustancia o método prohibido.</string>
    <string name="texto_sancionado_5">5. Administración o intento de administración de una sustancia o método prohibido a un deportista.</string>
    <string name="texto_sancionado_6">6. Incumplimiento de localización en el paradero de los deportistas o faltas a los controles.</string>
    <string name="texto_sancionado_7">7. Uso o intento de uso de una sustancia o método prohibido.</string>
    <string name="texto_sancionado_8">8. Tráfico o intento de tráfico de sustancia o método prohibido</string>
    <string name="texto_sancionado_9">9. Complicidad: asistir, alentar, ayudar, colaborar, conspirar,
        encubrir o cualquier tipo de complicidad intencional que vaya en contra de las normas de antidopaje</string>
    <string name="texto_sancionado_10">10. Asociación prohibida: los deportistas y otras personas
        dependientes de una organización antidopaje no pueden trabajar con entrenadores, médicos o
        cualquier personal de apoyo que se encuentren suspendidos por una infracción al código antidopaje.</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="aut_texto">Si para proteger tu salud necesitas tomar una sustancia prohibida o
        utilizar un método prohibido, entonces debes obtener la Autorización de Uso Terapéutico (AUT).
        \nLa solicitud de AUT debe realizarse al menos 30 días antes de competir en un torneo.
        \nLa AUT solo funcionará retroactivamente en casos de emergencia debidamente acreditados.
</string>
    <string name="pasos_a_seguir">¿QUÉ PASOS DEBO SEGUIR?</string>
    <string name="aut_paso1">Descarga el formulario de AUT \nhttps://goo.gl/ESbfNB</string>
    <string name="aut_paso2">Llena el formulario con tu médico y envíalo al correo de la comisión de AUT de la CONAD</string>
    <string name="aut_paso3">Una vez recibida tu solicitud, el panel de expertos la revisará y decidirá favorablemente en los siguientes casos:</string>
    <string name="aut_paso4">La CONAD te informará si tu solicitud fue aprobada. En caso de una solicitud denegada, se te informarán las razones y podrás apelar dicha decisión.</string>
    <string name="lista_prohibida_texto">La Lista Prohibida es un documento internacional preparado por la Agencia Mundial Antidopaje en el que se identifican las sustancias y métodos prohibidos en el deporte. Hay sustancias prohibidas en competencia y otras que están prohibidas fuera de competencia.
Conócelas AQUÍ.\nhttps://goo.gl/snwvEY \n
</string>
</resources>
