<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apoyo03_ui.antidoppingapp.fragmentsRiesgo.DeporteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/man"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></LinearLayout>
                <TextView
                    android:textStyle="bold"
                    android:background="#55000000"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:gravity=""
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/vida_deportiva_texto1"
                    android:textColor="@color/icons"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/apoyo_economico"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></LinearLayout>
                <TextView
                    android:textStyle="bold"
                    android:background="#55000000"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:gravity=""
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/vida_deportiva_texto2"
                    android:textColor="@color/icons"
                    android:textSize="15sp"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/medallas"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></LinearLayout>
                <TextView
                    android:textStyle="bold"
                    android:background="#55000000"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:gravity=""
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/vida_deportiva_texto3"
                    android:textColor="@color/icons"
                    android:textSize="15sp"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/campo_entrenamiento"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></LinearLayout>
                <TextView
                    android:textStyle="bold"
                    android:background="#55000000"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:gravity=""
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/vida_deportiva_texto4"
                    android:textColor="@color/icons"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/propia_cuenta"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></LinearLayout>
                <TextView
                    android:textStyle="bold"
                    android:background="#55000000"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:gravity=""
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/vida_deportiva_texto5"
                    android:textColor="@color/icons"
                    android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
